# Web-Crawler

./: .env.example  .gitignore  GITHUB_EXECUTION_BACKLOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-use-adr-process.md  0002-deterministic-crawl-order.md
scripts/: bootstrap.sh
src/web_crawler/: __init__.py  config.py  crawler.py  models.py
tests/: test_crawler.py
